--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: python
-node_js:
- - "8.9.1"
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
+  - "3.8"
+  - "3.8-dev"  # 3.8 development branch
+  - "nightly"  # nightly build
+install:
+  - pip install -r requirements.txt
+script:
+  - pytest
+before_install:
+- rvm install 8.9.1
