--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,26 @@
-language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"  # 3.8 development branch
-  - "nightly"  # nightly build
-install:
-  - pip install -r requirements.txt
-script:
-  - pytest
-before_install:
-- rvm install 8.9.1
+matrix:
+  include:
+  - language: python
+    python:
+    - '3.7'
+    install:
+    - pip install -r requirements.txt
+    - pip install codecov
+    script:
+    - pytest
+    after_success:
+    - codecov
+  - language: node_js
+    node_js:
+    - '8.9.1'
+    before_install:
+    - cd webapp
+    install:
+    - npm install
+    - npm install codecov -g
+    script:
+    - npm run lint
+    - npm run build
+    - npm run test
+    after_success:
+    - codecov
