--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "d3-node": "^2.2.1",
+    "eslint": "^6.8.0",
     "fibers": "^4.0.2",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
