--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "d3-node": "^2.2.1",
-    "eslint": "^6.8.0",
     "fibers": "^4.0.2",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
@@ -27,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint.js"
+    "lint": "node_modules/.bin/eslint ./"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.17.0"
   }
 }
