--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acorn": "^7.2.0",
     "bootstrap": "^4.4.1",
     "d3-node": "^2.2.1",
     "fibers": "^4.0.2",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
