--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,19 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "acorn": "^7.2.0",
     "bootstrap": "^4.4.1",
     "d3-node": "^2.2.1",
-    "fibers": "^4.0.2",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
-    "popper.js": "^1.16.1",
-    "react": "^16.12.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "sass": "^1.23.7",
-    "typescript": "^3.7.3"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,10 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.17.0"
   }
 }
