--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.1",
     "typescript": "^3.4.2"
