--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.2.0
 MarkupSafe==1.1.1
-marshmallow==3.6.0
+marshmallow==2.21.0
+marshmallow-annotations==2.4.0
 mccabe==0.6.1
 mistune==0.8.4
 pyrsistent==0.16.0
