--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = --cov=monograph --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
+# addopts = --cov=monograph --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
 # --cov-fail-under=70
 
 [flake8]
