--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
-    "d3-node": "^2.2.1",
+    "bootstrap": "^4.6.0",
+    "d3-node": "^2.2.2",
     "jquery": "^3.4.1",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.4.1",
-    "typescript": "^3.4.2"
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
+    "typescript": "^3.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
